--- a/Chinook/Shared/MainLayout.razor
+++ b/Chinook/Shared/MainLayout.razor
@@ -1,10 +1,11 @@
-﻿@inherits LayoutComponentBase
+﻿@using System.Security.Claims
+@inherits LayoutComponentBase
 
 <PageTitle>Chinook</PageTitle>
 
 <div class="page">
     <div class="sidebar">
-        <NavMenu />
+        <NavMenu CurrentUserId="@CurrentUserId" />
     </div>
 
     <main>
@@ -33,10 +34,26 @@
 
 
 @code{
+    [CascadingParameter] private Task<AuthenticationState> AuthenticationState { get; set; }
+
     private ErrorBoundary? ErrorBoundary; 
+    private string CurrentUserId;
+
+    protected override async Task OnInitializedAsync()
+    {
+        await InvokeAsync(StateHasChanged);
+        CurrentUserId = await GetUserId();
+    }
 
     protected override void OnParametersSet()
     {
         ErrorBoundary?.Recover(); 
+    }
+
+    private async Task<string> GetUserId()
+    {
+        var user = (await AuthenticationState).User;
+        var userId = user.FindFirst(u => u.Type.Contains(ClaimTypes.NameIdentifier))?.Value;
+        return userId;
     }
 }
